--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This repository is fork of http://imperialat.at/dev/filter-dkimsign
+This filter won't be possible without http://imperialat.at/dev/filter-dkimsign
